# gwatch

./: Cargo.toml  LICENSE  TASK.md  readme.md
gwatch/: Cargo.toml
gwatch/src/: main.rs  plot_data.rs
