[package]
name = "gwatch"
version = "0.1.0"
authors = ["Makhmudov Evgeniy", "Tom Forbes <tom@tomforb.es>"]
edition = "2018"
repository = "https://github.com/EvgeniyMakhmudov/gwatch"
license = "MIT"
description = "Watch command output with a graph."
build = "build.rs"
readme = "../readme.md"

[dependencies]
tui = { package = "ratatui", version = "0.29.0", features = ["crossterm"], default-features = false }
crossterm = "0.29.0"
anyhow = "1.0.101"
chrono = "0.4.43"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
shadow-rs = { version = "1.7.0", default-features = false }
const_format = "0.2.35"
clap = { version = "4.5.57", features = ["derive"] }
clap_mangen = "0.2.31"
clap-cargo = "0.18.3"

[build-dependencies]
shadow-rs = { version = "1.7.0"}
